# thesis-code

./: .gitignore  README.md  buf.gen.yaml  environment.yml  extract  geofabrik-download  gisevents.proto  osmconf.ini  pyproject.toml
geomdiff/: errors.py  geomdiff.py  patch.py  types.py
geomdiff_proj_files/: README.md  pyproject.toml
proto/gisevents/: gisevents.proto
src/: main.py
src/geomdiff/: geomdiff.py  myers.py  patch.py  types.py  utils.py
src/thesis/: __init__.py  cmd.py  events.py  extract_polygons.py  geo.py  osm.py  properties.py  thesis.py  types.py  utils.py
src/thesis/api/: __init__.py  event_store.py  ogr.py  osc.py
src/thesis/geodiff/: __init__.py  errors.py  geodiff.py  patch.py
src/thesis/gisevents/: __init__.py  gisevents_pb2.py  gisevents_pb2.pyi  utils.py
src/thesis/protobuf/: __init__.py  gisevents_pb2.py  utils.py
tests/: conftest.py  test_cleanup.py  test_create_mod_event.py  test_diff.py  test_events.py  test_find_middle_snake.py  test_geo.py  test_geomdiff.py  test_geoutils.py  test_get_linediff_message.py  test_get_pointdiff_msg.py  test_myers.py  test_patch.py  test_properties.py  test_shortest_edit_script.py  test_util.py  test_utils.py
tests/geodiff/: test_diff.py  test_patch.py  test_shortest_edit_script.py
tests/geomdiff/: test_shortest_edit_script.py
tests/protobuf/: test_utils.py
thesis/: cmd.py  events.py  geo.py
thesis/geomdiff/: __init__.py
thesis/protobuf/: gisevents_pb2.pyi
