[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geomdiff"
version = "0.0.1"
authors = [
  { name="Nicolaj Magga Nielsen", email="nicolaj.niels1@gmail.com" },
]
description = "GeomDiff is a diffing tool for geometries"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/N3on1x/geomdiff"
"Bug Tracker" = "https://github.com/N3on1x/geomdiff/issues"

[pytest]
testpaths = "tests"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
