[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geomdiff"
dynamic = ["version"]
description = 'Create edit scripts for vector geometries.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nicolaj Magga Nielsen", email = "nicolaj.niels1@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/geomdiff#readme"
Issues = "https://github.com/unknown/geomdiff/issues"
Source = "https://github.com/unknown/geomdiff"

[tool.hatch.version]
path = "geomdiff/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "shapely",
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:geomdiff tests}"

[tool.coverage.run]
source_pkgs = ["geomdiff", "tests"]
branch = true
parallel = true
omit = [
  "geomdiff/__about__.py",
]

[tool.coverage.paths]
geomdiff = ["geomdiff", "*/geomdiff/geomdiff"]
tests = ["tests", "*/geomdiff/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
